prog.cppresult.txt
cur.cpp: In member function 'virtual void MatrixTest_Reverse_Test::TestBody()':
cur.cpp:47:7: error: no match for 'operator=' (operand types are 'Matrix' and 'Matrix')
     c = m->reverse();
       ^
cur.cpp:47:7: note: candidate is:
In file included from cur.cpp:16:0:
maria/prog.cpp:75:9: note: Matrix Matrix::operator=(Matrix&)
  Matrix operator= (Matrix& a)
         ^
maria/prog.cpp:75:9: note:   no known conversion for argument 1 from 'Matrix' to 'Matrix&'
./check.sh: line 24: ./a.out: No such file or directory
